fix post listing on blog page on small screens

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -303,6 +303,14 @@ BLOG SECTION
     }
 }
 
+@media screen and (max-width: 550px) {
+    #postList {
+        .blog-feature {
+            height: 200px;
+        }
+    }
+}
+
 .blog-date {
     font-style: italic;
 }
